[gd_scene load_steps=3 format=3 uid="uid://c1nx2rbdpg2dc"]

[ext_resource type="Script" path="res://Menues/game_over.gd" id="1_n3wgp"]
[ext_resource type="Texture2D" uid="uid://d1xdcl6h1jt3e" path="res://Assets/Gameover.png" id="2_ogccm"]

[node name="gameOver" type="CanvasLayer"]
script = ExtResource("1_n3wgp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(578, 324)
scale = Vector2(0.425, 0.425)
texture = ExtResource("2_ogccm")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 206.0
offset_top = 35.0
offset_right = -714.0
offset_bottom = -521.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Game Over "

[node name="exit" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 213.0
offset_top = 174.0
offset_right = -808.0
offset_bottom = -438.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../retry")
text = "Exit"

[node name="retry" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 212.0
offset_top = 122.0
offset_right = -809.0
offset_bottom = -490.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../exit")
text = "Retry"

[node name="name" type="LineEdit" parent="."]
offset_left = 212.0
offset_top = 267.0
offset_right = 506.0
offset_bottom = 303.0
placeholder_text = "Enter your name here ..."

[node name="save" type="Button" parent="."]
offset_left = 516.0
offset_top = 267.0
offset_right = 648.0
offset_bottom = 303.0
text = "save"

[node name="score" type="Label" parent="."]
offset_left = 214.0
offset_top = 238.0
offset_right = 428.0
offset_bottom = 268.0
text = "Your score: "

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="save" to="save" method="is_pressed"]
